# kumo-rfm-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE_DESKTOP_SETUP.md  CONTRIBUTING.md  README.md  manifest.json  pyproject.toml
.github/workflows/: _release.yml  build.yml  lint.yml  mcpb.yml  publish.yml  release.yml  test.yml
kumo_rfm_mcp/: config.py  server.py  session.py
kumo_rfm_mcp/resources/: __init__.py  explainability.md  graph-setup.md  overview.md  overview_resources.py  predictive-query.md
kumo_rfm_mcp/tools/: __init__.py  auth.py  doc.py  docs.py  graph.py  io.py  model.py
mcpb/: .dxtignore  .gitignore  README.md  manifest.json  requirements.txt  server.py
mcpb/server/: main.py
scripts/: test_mcp_client.py  validate_wheels_for_release.sh
src/kumo_rfm_mcp/: __init__.py  data_models.py  server.py  session.py  utils.py
src/kumo_rfm_mcp/resources/: __init__.py  docs_resources.py  examples_resources.py  overview_resources.py
src/kumo_rfm_mcp/tools/: __init__.py  docs_tools.py  graph_tools.py  metadata_tools.py  model.py  model_tools.py  session_tools.py  table_tools.py
test/: conftest.py  test_session.py  test_table_tools.py
test/tools/: test_graph.py  test_io.py  test_model.py
tests/: test_docs_tools.py  test_graph_tools.py  test_model_tools.py  test_table_tools.py
tests/data/: malformed.csv  test_items.csv  test_orders.csv  test_users.csv
