[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kumo-rfm-mcp"
dynamic = ["version"]
description = "Model Context Protocol server for KumoRFM"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kumo.AI", email = "hello@kumo.ai" }
]
keywords = [
  "rfm",
  "mcp",
  "foundation model",
  "relational data",
  "kumo",
]
requires-python = ">=3.10"
dependencies = [
    "kumoai>=2.7.0.dev0",
    "pandas",
    "fastmcp",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "ruff",
]

[project.scripts]
kumo-rfm-mcp = "kumo_rfm_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kumo_rfm_mcp"]

[tool.hatch.version]
path = "src/kumo_rfm_mcp/_version.py"

[project.urls]
Homepage = "https://github.com/kumo-ai/kumo-rfm-mcp"
Repository = "https://github.com/kumo-ai/kumo-rfm-mcp.git"
Issues = "https://github.com/kumo-ai/kumo-rfm-mcp/issues"
